make sure h1 only goes 90% on mobile too as well as button

--- a/styles/PanelPdfLink.module.css
+++ b/styles/PanelPdfLink.module.css
@@ -140,6 +140,10 @@
 }
 
 @media (max-width: 700px) {
+  .item h1 {
+    width: 90%;
+  }
+
   .item button {
     width: 90%;
   }
